Harden module flows and expand coverage (#147)
* Harden module flows and expand coverage

Add safer /back warmup/cooldown handling, public homes support, inventory writeback guards, and broader module tests.

* Fix CI Java toolchain target

* Resolve Sonar issues in hardening PR

* Address PR review comments